--- a/main.html
+++ b/main.html
@@ -121,7 +121,6 @@
       </div>
     </div>
 
-    <!-- 영화 리스트 -->
     <div class="list" id="movie-list">
       <!-- 여기에 영화 카드가 동적으로 추가될 예정 -->
     </div>
@@ -137,7 +136,27 @@
         },
       };
 
-      const array1 = new Array();
+      let movieArray = [];
+
+      function searchResult() {
+        const searchKeyword = document.getElementById("search_movie").value;
+        handleSearch(searchKeyword);
+      }
+
+      function handleSearch(searchKeyword) {
+        const movieCards = document.querySelectorAll(".card");
+        movieCards.forEach((card) => {
+          const title = card
+            .querySelector(".comment h4")
+            .textContent.toLowerCase();
+          const searchedValue = searchKeyword.toLowerCase();
+          if (title.includes(searchedValue)) {
+            card.style.display = "block";
+          } else {
+            card.style.display = "none";
+          }
+        });
+      }
 
       fetch(
         "https://api.themoviedb.org/3/movie/top_rated?language=en-US&page=1",
@@ -146,8 +165,6 @@
         .then((response) => response.json())
         .then((data) => {
           const movieList = document.getElementById("movie-list");
-
-          // 각 영화 정보를 카드 형식으로 표시
           data.results.forEach((movie) => {
             const card = document.createElement("div");
             card.classList.add("card");
@@ -158,39 +175,27 @@
               : "https://via.placeholder.com/200x300";
 
             card.innerHTML = `
-                        <div class="list-1">
-                          <img src="${imageUrl}" alt="${movie.title} 포스터" />
-                          <div class="comment">
-                            <h4>${movie.title}</h4>
-                            <p>${movie.overview}</p>
-                            <p>평점: ${movie.vote_average}</p>
-                          </div>
-                        </div>
-                      `;
+              <div class="list-1">
+                <img src="${imageUrl}" alt="${movie.title} 포스터" />
+                <div class="comment">
+                  <h4>${movie.title}</h4>
+                  <p>${movie.overview}</p>
+                  <p>평점: ${movie.vote_average}</p>
+                </div>
+              </div>
+            `;
 
-            // 카드를 클릭했을 때의 동작 설정
             card.addEventListener("click", () => {
               alert("클릭한 카드의 ID는 " + movie.id + " 입니다.");
             });
 
             movieList.appendChild(card);
-            array1.push(movie.title);
+            movieArray.push(movie.title);
           });
         })
         .catch((error) => {
           console.error("Error fetching data:", error);
         });
-
-      // 검색기능
-      function searchResult() {
-        const movieName = document.getElementById("search_movie").value;
-        console.log(movieName);
-
-        /*for (i = 0; i < 20; i++) {
-          const arr = array1[i];
-          console.log(arr);
-        }*/
-      }
     </script>
   </body>
 </html>
